--- a/scripts/build
+++ b/scripts/build
@@ -1,5 +1,8 @@
 #!/bin/bash
 set -eE -o pipefail
 
+script_dir=$(dirname "$(realpath "$0")")
+cd $script_dir/..
+
 version=$(git describe --tags --always)
 go build -ldflags="-X main.appVersion=$version" ./cmd/zfind
