--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
       run: scripts/chkfmt
 
     - name: tests
-      run: scripts/tests
+      run: |
+        scripts/tests
+        scripts/run_test_prep
+        scripts/run_tests
 
     - name: xbuild
       run: scripts/xbuild
