fix test tz and sort

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,13 @@ jobs:
     - name: chkfmt
       run: scripts/chkfmt
 
+    - name: prep-test
+      run: scripts/run_test_prep
+
     - name: tests
       run: |
         scripts/tests
+        scripts/run_tests
 
     - name: xbuild
       run: scripts/xbuild
