--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,13 @@ jobs:
     - name: chkfmt
       run: scripts/chkfmt
 
+    - name: prep-test
+      run: scripts/run_test_prep
+
     - name: tests
       run: |
         scripts/tests
+        scripts/run_tests
 
     - name: xbuild
       run: version=${GITHUB_REF#$"refs/tags/v"} scripts/xbuild
